--- a/frontend-01/03-CSS/CSS/05-font.css
+++ b/frontend-01/03-CSS/CSS/05-font.css
@@ -66,3 +66,11 @@ html, body{
   font-weight: 700;
   font-style: normal;
 }
+
+/* font 속기 : font-style, font-variant, font-wieght, font-strech, font-size/line-height font-family*/
+/* 다 써줘야 함! */
+.text5{
+  font: italic normal bold normal 3em/1.5 Helvetica,
+  Arial,
+  sans-serif;
+}
