--- a/frontend-01/03-CSS/CSS/07-layout.css
+++ b/frontend-01/03-CSS/CSS/07-layout.css
@@ -1,3 +1,36 @@
+/* column */
+.column1{
+    column-count: 3;
+    column-gap: 40px;
+    column-rule-width: 1px;
+    column-rule-style: solid;
+    column-rule-color: #E4E0E1;
+}
+.column2{
+    column-count: 4;
+    column-gap: 20px;
+    column-rule: 1px solid #E78F81;
+}
+
+/* 완벽한 센터링 */
+.center1{
+    position: relative;
+    width: 100%;
+    height: 500px;
+    background-color: #6A9AB0;
+}
+
+.center2{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100px;
+    height: 100px;
+    /* margin: -50px 0 0 -50px; */
+    transform: translate(-50%, -50%);
+    background-color: #E7CCCC;
+    
+}
 
 /* inline */
 .inline{
@@ -54,6 +87,17 @@
     height:100px;
     border:1px solid;
     overflow:scroll;
+}
+.etc{
+    white-space: nowrap;
+    width:500px;
+    height:100px;
+    overflow:hidden;
+    text-overflow: ellipsis;
+}
+.etc:hover{
+    white-space: normal;
+    overflow: scroll;
 }
 
 /* float */
